# python

./: README.md
argparse_example/: README.md  pyproject.toml
argparse_example/argparse_example/: __init__.py
argparse_example/tests/: test_cli.py
keyboard_handler/: pyproject.toml
keyboard_handler/keyboard_handler/: __init__.py
selenium_example/: pyproject.toml
selenium_example/selenium_example/: __init__.py
