[tool.poetry]
name = "argparse-example"
version = "0.1.0"
description = ""
authors = ["ritzier <ritzierwheat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
argparse = "^1.4.0"


[tool.poetry.scripts]
run = "argparse_example:main"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
